# cmor438-ml-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: dataset_algorithm_decision.md  implementation_plan.md  project_plan.md  project_scope.md
examples/: README.md  basic_classification_demo.py
notebooks/: 01_breast_cancer_classification_workflow.ipynb  README.md
notebooks/Supervised/: README.md
notebooks/Supervised/1. Perceptron/: perceptron.ipynb
notebooks/Supervised/2. Gradient Descent/: gradient_descent.ipynb
notebooks/Supervised/3. Linear Regression/: linear_regression.ipynb
notebooks/Supervised/4. Logistic Regression/: logistic_regression.ipynb
notebooks/Supervised/5. Multilayer Perceptron/: multilayer_perceptron.ipynb
notebooks/Supervised/6. K Nearest Neighbors/: k_nearest_neighbors.ipynb
notebooks/Supervised/7. Decision Tree/: decision_tree.ipynb
notebooks/Supervised/8. Random Forest/: random_forest.ipynb
notebooks/Unsupervised/: README.md
notebooks/Unsupervised/K Means Clustering/: k_means_clustering.ipynb
src/cmor438_ml/: __init__.py  datasets.py  evaluation.py  metrics.py  model_selection.py  preprocessing.py  validation.py
src/cmor438_ml/models/: __init__.py  knn.py  logistic_regression.py
tests/: test_datasets.py  test_evaluation.py  test_import.py  test_knn.py  test_logistic_regression.py  test_metrics.py  test_model_selection.py  test_preprocessing.py  test_validation.py
